pushable dataset added

--- a/HW_hyb_rs.ipynb
+++ b/HW_hyb_rs.ipynb
@@ -16,17 +16,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# стекинг\n",
-    "# блендинг\n",
-    "# смешивание\n",
-    "# комибинирование фич\n",
-    "# каскадные\n",
-    "# метарекомендации\n",
-    "# lightfm"
+    "from surprise import SVD, SVDpp\n",
+    "from surprise import Dataset\n",
+    "from surprise import accuracy\n",
+    "from surprise import Reader\n",
+    "from surprise.model_selection import train_test_split\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from tqdm import tqdm_notebook\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer, CountVectorizer\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -55,7 +63,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# стекинг\n",
+    "# каскадные\n",
+    "# метарекомендации\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -70,6 +82,22 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lightfm"
+   ]
   },
   {
    "cell_type": "code",
