metarecommendation by user

--- a/HW_hyb_rs.ipynb
+++ b/HW_hyb_rs.ipynb
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# стекинг"
+    "# learning"
    ]
   },
   {
@@ -442,6 +442,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# stacking"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 122,
    "metadata": {},
@@ -599,26 +606,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# предсказан при помощи стакинга рейтинг конкретного фильма для конкретного пользователя "
+    "# предсказан рейтинг конкретного фильма для конкретного пользователя при помощи стакинга моделей"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# каскадные\n",
     "# метарекомендации"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predicts_df['algo_1_r'] = np.abs(predicts_df['algo_1'] - predicts_df['rating'])\n",
+    "# predicts_df['algo_2_r'] = np.abs(predicts_df['algo_2'] - predicts_df['rating'])\n",
+    "# predicts_df['algo_3_r'] = np.abs(predicts_df['algo_3'] - predicts_df['rating'])\n",
+    "# predicts_df['algo_4_r'] = np.abs(predicts_df['algo_4'] - predicts_df['rating'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# predicts_df['true_algo'] = predicts_df.copy().loc[:,['algo_1_r','algo_2_r','algo_3_r','algo_4_r']].idxmin(axis=\"columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_df = predicts_df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_df = pred_df.join(dataset.drop('rating', axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -642,157 +685,212 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>rating</th>\n",
+       "      <th>algo_1</th>\n",
+       "      <th>algo_2</th>\n",
+       "      <th>algo_3</th>\n",
+       "      <th>algo_4</th>\n",
        "      <th>uid</th>\n",
        "      <th>iid</th>\n",
-       "      <th>rating</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.631020</td>\n",
+       "      <td>4.437411</td>\n",
+       "      <td>4.743843</td>\n",
+       "      <td>4.688279</td>\n",
        "      <td>1.0</td>\n",
        "      <td>Toy Story (1995)</td>\n",
-       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.810775</td>\n",
+       "      <td>4.031528</td>\n",
+       "      <td>3.877734</td>\n",
+       "      <td>3.859359</td>\n",
        "      <td>5.0</td>\n",
        "      <td>Toy Story (1995)</td>\n",
-       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.441314</td>\n",
+       "      <td>4.135260</td>\n",
+       "      <td>3.368667</td>\n",
+       "      <td>3.686063</td>\n",
        "      <td>7.0</td>\n",
        "      <td>Toy Story (1995)</td>\n",
-       "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>3.684760</td>\n",
+       "      <td>2.935026</td>\n",
+       "      <td>3.397402</td>\n",
+       "      <td>3.670467</td>\n",
        "      <td>15.0</td>\n",
        "      <td>Toy Story (1995)</td>\n",
-       "      <td>2.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4.5</td>\n",
+       "      <td>4.082983</td>\n",
+       "      <td>4.296729</td>\n",
+       "      <td>4.247865</td>\n",
+       "      <td>4.143816</td>\n",
        "      <td>17.0</td>\n",
        "      <td>Toy Story (1995)</td>\n",
-       "      <td>4.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100849</th>\n",
-       "      <td>184.0</td>\n",
-       "      <td>Black Butler: Book of the Atlantic (2017)</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100850</th>\n",
-       "      <td>184.0</td>\n",
-       "      <td>No Game No Life: Zero (2017)</td>\n",
-       "      <td>3.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100851</th>\n",
-       "      <td>184.0</td>\n",
-       "      <td>Flint (2017)</td>\n",
-       "      <td>3.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100852</th>\n",
-       "      <td>184.0</td>\n",
-       "      <td>Bungo Stray Dogs: Dead Apple (2018)</td>\n",
-       "      <td>3.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100853</th>\n",
-       "      <td>331.0</td>\n",
-       "      <td>Andrew Dice Clay: Dice Rules (1991)</td>\n",
-       "      <td>4.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100836 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          uid                                        iid  rating\n",
-       "0         1.0                           Toy Story (1995)     4.0\n",
-       "1         5.0                           Toy Story (1995)     4.0\n",
-       "2         7.0                           Toy Story (1995)     4.5\n",
-       "3        15.0                           Toy Story (1995)     2.5\n",
-       "4        17.0                           Toy Story (1995)     4.5\n",
-       "...       ...                                        ...     ...\n",
-       "100849  184.0  Black Butler: Book of the Atlantic (2017)     4.0\n",
-       "100850  184.0               No Game No Life: Zero (2017)     3.5\n",
-       "100851  184.0                               Flint (2017)     3.5\n",
-       "100852  184.0        Bungo Stray Dogs: Dead Apple (2018)     3.5\n",
-       "100853  331.0        Andrew Dice Clay: Dice Rules (1991)     4.0\n",
-       "\n",
-       "[100836 rows x 3 columns]"
+       "   rating    algo_1    algo_2    algo_3    algo_4   uid               iid\n",
+       "0     4.0  4.631020  4.437411  4.743843  4.688279   1.0  Toy Story (1995)\n",
+       "1     4.0  3.810775  4.031528  3.877734  3.859359   5.0  Toy Story (1995)\n",
+       "2     4.5  3.441314  4.135260  3.368667  3.686063   7.0  Toy Story (1995)\n",
+       "3     2.5  3.684760  2.935026  3.397402  3.670467  15.0  Toy Story (1995)\n",
+       "4     4.5  4.082983  4.296729  4.247865  4.143816  17.0  Toy Story (1995)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset"
+    "pred_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 236,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-236-f67261a6bfba>:3: TqdmDeprecationWarning: This function will be removed in tqdm==5.0.0\n",
+      "Please use `tqdm.notebook.tqdm` instead of `tqdm.tqdm_notebook`\n",
+      "  for user_id, group in tqdm_notebook(pred_df.groupby('uid')):\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d07c1ce4c0764eb9842cbdc333b9fc87",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=610.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_algo_for_user_dict = {}\n",
+    "\n",
+    "for user_id, group in tqdm_notebook(pred_df.groupby('uid')):\n",
+    "    rmse_list = []\n",
+    "    \n",
+    "    rmse_list.append(np.sqrt(mean_squared_error(group['rating'], group['algo_1'])))\n",
+    "    rmse_list.append(np.sqrt(mean_squared_error(group['rating'], group['algo_2'])))\n",
+    "    rmse_list.append(np.sqrt(mean_squared_error(group['rating'], group['algo_3'])))\n",
+    "    rmse_list.append(np.sqrt(mean_squared_error(group['rating'], group['algo_4'])))\n",
+    "    \n",
+    "    best_algo_for_user_index = np.array(rmse_list).argmin()\n",
+    "    \n",
+    "    best_algo_for_user_dict.setdefault(user_id,(f'algo_{best_algo_for_user_index+1}'))\n",
+    "#     break"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "models_dict = {\n",
+    "    'algo_1' : algo_1, \n",
+    "    'algo_2' : algo_2, \n",
+    "    'algo_3' : algo_3, \n",
+    "    'algo_4' : algo_4, \n",
+    "}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 252,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'algo_2'"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_algo_for_user_dict.get(184)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def best_algo_recommendation(user_id, item_id):\n",
+    "    best_algo = best_algo_for_user_dict.get(user_id)\n",
+    "\n",
+    "    pred_rait = models_dict.get(best_algo).predict(user_id, item_id)\n",
+    "    \n",
+    "    return pred_rait"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 276,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(uid=184, iid='Toy Story (1995)', r_ui=None, est=4.5419459385279914, details={'actual_k': 20, 'was_impossible': False})"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_algo_recommendation(184,'Toy Story (1995)')"
+   ]
   },
   {
    "cell_type": "markdown",
